--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,10 @@ body {
   padding: 50px;
   grid-column: 1/ -1;
 }
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
